<resources>
    <string name="app_name">Crunchquest</string>
    <string name="login_heading">Welcome to</string>
    <string name="login_heading_2">Sign In To Crunchquest For Free!</string>
    <string name="login_sub_heading">Get quest recommendations and earn your rewards everyday!</string>

    <!-- Accessibility strings -->
    <string name="navigation_item_home">Home</string>
    <string name="navigation_item_discover">Discover</string>
    <string name="navigation_item_social">Social</string>
    <string name="navigation_item_shop">Shop</string>
    <string name="navigation_item_rank">Rank</string>
    <string name="profile">Profile</string>
    <string name="menu_home">Home</string>
    <string name="menu_track">Track</string>
    <string name="menu_profile">Profile</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="field_email">Email</string>
    <string name="field_password">Password</string>
    <string name="field_forgot_password">Forgot Password</string>
    <string name="field_login">Sign in</string>
    <string name="sign_up_prompt_alt">You don\'t have an account yet?</string>
    <string name="sign_up_prompt">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="services_category">
        <item>Computer Repair</item>
        <item>Home Cleaning</item>
        <item>Plumbing</item>
        <item>Electrical</item>
        <item>Moving</item>
        <item>Delivery</item>
        <item>Aircon</item>
        <item>Home Repair</item>
        <item>Auto Repair</item>
    </string-array>

    <string-array name="educationStatus">
        <item>Primary School Graduate</item>
        <item>Secondary School Graduate</item>
        <item>High School Graduate</item>
        <item>University Graduate</item>
        <item>Postgraduate</item>
        <item>On going</item>
    </string-array>

    <string-array name="skillLevel">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Expert</item>
    </string-array>

    <string-array name="modeOfPayment">
        <item>Cash</item>
        <item>Mobile Payments</item>
        <item>Electronic Bank Transfers</item>
    </string-array>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Outscoped Strings -->
    <string name="on_boarding_heading">Find Your \nDream Job \nHere!</string>
    <string name="on_boarding_sub_heading">Explore all the most exciting job roles based on your interest and study major.</string>
    <string name="login_fragment_heading">Welcome Back</string>
    <string name="login_fragment_sub_heading">Let’s Login. Fill in your details to apply for jobs!</string>
    <string name="signup_fragment_heading">Create a Crunchquest Account</string>
    <string name="signup_fragment_sub_heading">Unlock all features to conquer quest as much as you can.</string>
    <string name="forget_pass_fragment_sub_heading">To reset your password, you need your email or mobile number that can be authenticated</string>
    <string name="email_fragment_heading">Check Your Email</string>
    <string name="email_fragment_sub_heading">We have sent the reset password to the email address brandonelouis@gmial.com</string>
    <string name="student_detail_fragment_heading">Add Details</string>
    <string name="address_detail_fragment_heading">Add Address</string>
    <string name="student_academic_fragment_heading">Add SGPI</string>
    <string name="resume_fragment_heading">Add Resume</string>
    <string name="bottom_sheet_heading">Remove File</string>
    <string name="bottom_sheet_sub_heading">Are you sure you want to delete this File?</string>
    <string name="fragment_mock_test_sub_heading">Mock Tests</string>
    <string name="field_test_conducted">Test Conducted</string>

    <string name="field_first_name">First Name</string>
    <string name="field_last_name">Last Name</string>
    <string name="field_signup">Sign Up</string>
    <string name="field_back_to_login">Back to login</string>
    <string name="field_open_email">Open Your Email</string>
    <string name="field_reset_password">Reset Password</string>

    <string name="login_prompt">Already have an account? Login</string>
    <string name="email_resend_prompt">You have not received the email? Resend</string>

    <string name="auth_pass">Authentication Success</string>
    <string name="auth_fail">Authentication Failed</string>

    <string name="field_error_username">Enter valid username</string>
    <string name="field_error_email">Enter valid email ID</string>
    <string name="field_error_password">Enter valid password</string>
    <string name="reset_pass">Reset Password Send Success</string>
    <string name="reset_fail">Reset Password Failed</string>

    <string name="upload_image">Upload Profile</string>
    <string name="field_sap_id">Sap ID</string>
    <string name="field_mobile">Mobile</string>
    <string name="field_gender">Gender</string>
    <string name="field_dob">DOB</string>
    <string name="field_next">Next</string>
    <string name="field_hint">Address</string>
    <string name="field_city">City</string>
    <string name="field_state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="field_sem_1">Semester 1</string>
    <string name="field_sem_2">Semester 2</string>
    <string name="field_sem_3">Semester 3</string>
    <string name="field_sem_4">Semester 4</string>
    <string name="field_avg_sem">Average of SGPI</string>
    <string name="field_company_and_location">%s \u2022 %s</string>
    <string name="heading_student_applied">Student Applied</string>
    <string name="student_count"> %s </string>
    <string name="header_job_description">Job Description</string>
    <string name="header_salary">Salary</string>
    <string name="header_responsibilities">Responsibilities</string>
    <string name="header_skill_set">Required Skills</string>
    <string name="header_all_jobs">All Jobs</string>
    <string name="field_search">Search</string>
    <string name="field_apply">Apply</string>
    <string name="field_job_applied">Job Applied</string>
    <string name="field_question">Question</string>
    <string name="field_duration">Duration</string>
    <string name="field_instruction">Instruction</string>
    <string name="field_navigation">Navigation</string>
    <string name="field_start_test">Start Test</string>
    <string name="field_mock_duration">%sm</string>
    <string name="field_duration_start">00:00</string>
    <string name="field_tab_text">%d</string>
    <string name="field_report_header">Report</string>
    <string name="field_in_correct">Incorrect</string>
    <string name="field_un_attempted">Unattempted</string>
    <string name="field_time_taken">Time Taken</string>
    <string name="field_solution">Solution</string>
    <string name="field_score">%s/%s</string>

    <string name="menu_field_home">Home</string>
    <string name="menu_field_alert">Alerts</string>
    <string name="menu_field_test">Tests</string>
    <string name="menu_field_jobs">Jobs</string>

    <string name="field_error_sap_id">Enter valid Sap Id</string>
    <string name="field_error_mobile">Enter valid Mobile No.</string>
    <string name="field_error_dob">Enter valid Date</string>
    <string name="field_error_image">Please Select Image</string>
    <string name="field_error_address">Enter valid Address</string>
    <string name="field_error_city">Enter valid City</string>
    <string name="field_error_state">Enter valid State</string>
    <string name="field_error_zip_code">Enter valid Zip Code</string>
    <string name="field_error_score">Enter valid Score</string>
    <string name="field_error_job_applied">Job application failed</string>

    <string name="resume_meta_data">%1$s Mb · %2$s</string>
    <string name="resume_guideline">Upload files in PDF format up to 5 MB. Just upload it once and you can use it in your next application.</string>
    <string name="bottom_sheet_button_text">No</string>
    <string name="button_submit_text">Submit</string>
    <string name="field_welcome_text">Hello \n%s</string>

    <string name="home_fragment_field_status">Status</string>
    <string name="home_fragment_field_companies">Companies</string>
    <string name="home_fragment_field_job_applied">Jobs Applied</string>
    <string name="home_fragment_job_list">Recent Job List</string>
    <string name="field_value_count">%s!</string>

    <string name="invalid_credentials">Invalid email or password</string>
    <string name="invalid_user">The specified user does not exist</string>
    <string name="network_error">A network error occurred</string>

    <string name="loading">Loading</string>
    <string name="completed">Done</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string name="mock_test_instructions">1. Test will be auto submitted when the time is up.\n\n2. The comprises of multiple choice questions (MCQ) with one correct answer.\n\n3. The clock in the top right corner will display the remaining time available for you to complete the test.</string>
    <string name="mock_test_navigation">1. Select the option and the answer will be saved once you click on the submit button.\n\n2. Once you click on the submit button, you cannot change the answer and the solution will be displayed on the bottom.\n\n3. To go onto the next question, slide towards left.</string>
    <string name="field_mobile_number">Phone Number</string>
    <string name="field_confirm_password">Confirm Password</string>
    <string name="client_mode_description">Browse various service categories, and book which service you would need</string>
    <string name="provider_mode_description">List your services and earn cash through the mobile application</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>